# aiot_esp32_hw1

./: .gitignore  AIoT_HW_Report.md  README.md  aiotdb.db  aiotdb.py  chatlog__Building Python AIoT Demo.md  dashboard.py  dashboard_demo.py  esp32_sim.py  esp32_sim_server.py  implementation_plan.md  pyproject.toml  requirements.txt  run_demo.bat  run_real_demo.bat  serial_bridge.py  walkthrough.md
dht11_esp32/: dht11_esp32.ino
